--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -322,6 +322,10 @@ footer {
       .cv-main h3 strong br {
         display: none; } }
 
+@media (min-width: 768px) and (max-width: 1199px) {
+  .cv-main h3 {
+    font-size: 1.375rem; } }
+
 .cv-main h4 {
   color: #333;
   font: italic 700 1.125rem/1.4 "Raleway", sans-serif; }
