--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -453,7 +453,7 @@ footer {
 
     h4 {
         color: $content-color;
-        font: italic 700 1.125rem/1.4 $primary-font-stack;
+        font: italic 600 1.125rem/1.5 $special-font-stack;
     }
 
     p,
