--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -328,7 +328,7 @@ footer {
 
 .cv-main h4 {
   color: #333;
-  font: italic 700 1.125rem/1.4 "Raleway", sans-serif; }
+  font: italic 600 1.125rem/1.5 "Montserrat", sans-serif; }
 
 .cv-main p,
 .cv-main ul {
